[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Gentile", email = "genti337@gmail.com"},
]
dependencies = [
    "numpy>=1.22.2",
    "pandas>=1.4.1",
    "argparse>=1.4.0",
    "matplotlib>=3.5.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
